# finance-timeseries-platform

./: README.md  day-by-day-plan.md  publish-blog.ps1
blog/: _quarto.yml  index.qmd
blog/docs/: index.html  index.xml  robots.txt  search.json  sitemap.xml
blog/docs/posts/day-01-03-foundations/: day-01-03-foundations.html
blog/docs/posts/day-05-10-silver-gold/: day-05-10-silver-gold.html
blog/posts/day-01-03-foundations/: day-01-03-foundations.qmd
blog/posts/day-05-10-silver-gold/: day-05-10-silver-gold.qmd
blog/posts/post-with-code/: index.qmd
blog/posts/welcome/: index.qmd
docs/: about.html  index.html  index.xml  listings.json  search.json  sitemap.xml
docs/posts/day-01-03-foundations/: day-01-03-foundations.html
docs/posts/post-with-code/: index.html
finance_timeseries_platform/: README.md  databricks.yml  pyproject.toml
finance_timeseries_platform/resources/: finance_timeseries_platform_etl.pipeline.yml  sample_job.job.yml
finance_timeseries_platform/src/: classifier.py  clustering.py  features.py  gold.py  ingestion.py  sample_notebook.ipynb
finance_timeseries_platform/src/config/: features.yaml  sources.yaml
finance_timeseries_platform/src/finance_timeseries_platform/: main.py
finance_timeseries_platform/src/finance_timeseries_platform_etl/: README.md
finance_timeseries_platform/src/finance_timeseries_platform_etl/transformations/: sample_trips_finance_timeseries_platform.py  sample_zones_finance_timeseries_platform.py
finance_timeseries_platform/tests/: conftest.py  sample_taxis_test.py  test_features.py
(+1 files in other folders)
